<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font_type="http://schemas.android.com/apk/res/com.isocarde.citrocaen.communicarde"
    android:id="@+id/backgroundVertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VueGlobale" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@color/darkColor"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".VueGlobale" >

        <LinearLayout
            android:id="@+id/headerTexte"
            android:layout_width="@dimen/headerTexte_width"
            android:layout_height="@dimen/headerTexte_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/middleColor"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".VueGlobale" >

            <com.isocarde.citrocaen.communicarde.ui.IsocardeTextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/title1"
                android:textSize="@dimen/title_size"
          font_type:ttf_name="fonts/papyrus.ttf" />

            <requestFocus />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:background="@color/darkColor"
        android:orientation="horizontal"
        tools:context=".VueGlobale" >

        <LinearLayout
            android:id="@+id/panneau_gauche"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:background="@color/darkColor"
            android:orientation="vertical"
            tools:context=".VueGlobale" >

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_button1"
                android:textColor="@color/lightColor"
                android:textColorHint="@color/darkColor" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_button2"
                android:textColor="@color/lightColor"
                android:textColorHint="@color/darkColor" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_button3"
                android:textColor="@color/lightColor"
                android:textColorHint="@color/darkColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/panneau_droit"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:background="@color/backGroundPerso"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingRight="20dp"
            tools:context=".VueGlobale" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bordure_bas"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="@color/darkColor"
        android:orientation="vertical"
        tools:context=".VueGlobale" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/White"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:context=".VueGlobale" >

        <RelativeLayout
            android:id="@+id/footer_gauche"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@color/White"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:context=".VueGlobale" >

            <ImageView
                android:id="@+id/footer_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/content_description_bas_de_page"
                android:scaleType="fitXY"
                android:src="@drawable/bas_de_page" />

            <TextView
                android:id="@+id/contacts_texte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="50dp"
                android:gravity="center"
                android:text="@string/contacts" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/footer_logo_citrocaen"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_logo_citrocaen"
            android:src="@drawable/logo_citrocaen" />

        <!-- android:background="@color/lightColor" -->
    </LinearLayout>

</LinearLayout>